10/05(부모, 형제 노드 추가 방법)

--- a/10 04 JS DOM요소 다루기 f4c4c642403940f380d7a8e4ddec9ebe.md
+++ b/10 04 JS DOM요소 다루기 f4c4c642403940f380d7a8e4ddec9ebe.md
@@ -5,7 +5,7 @@ Section: KDT 3rd
 최종 편집일시: 2022년 10월 4일 오후 12:25
 
 ```jsx
-let div1 = document.getElementById('div1');
+let div1 = document.getElementById("div1");
 console.log(div1);
 
 // innerHTML 속성
@@ -14,16 +14,16 @@ console.log(div1);
 // 읽기: 요소.innerHTML
 // 쓰기: 요소.innerHTMl = 수정하려는 태그
 console.log(div1.innerHTML); // 읽기
-div1.innerHTML = '여기는 <b>첫번째</b> 태그입니다. &hearts;'; // 쓰기
+div1.innerHTML = "여기는 <b>첫번째</b> 태그입니다. &hearts;"; // 쓰기
 
 // innerText 속성
 // : 요소 안의 "텍스트"를 가져오거나 수정
-// => 입력된 문자열을 그대로!! 
+// => 입력된 문자열을 그대로!!
 // 읽기: 요소.innerText
 // 쓰기: 요소.innerText = 수정하려는 텍스트
 console.log(div1.innerText); // 읽기
-div1.innerText = '여기는 <b>첫번째</b> 태그입니다. &hearts;'; // 쓰기
-div1.innerText = '안녕하세요!!'; // 쓰기
+div1.innerText = "여기는 <b>첫번째</b> 태그입니다. &hearts;"; // 쓰기
+div1.innerText = "안녕하세요!!"; // 쓰기
 ```
 
 ```jsx
@@ -31,7 +31,7 @@ div1.innerText = '안녕하세요!!'; // 쓰기
 // : innerText와 마찬가지로 텍스트 정보를 표시
 // IE9 이전 버전에서는 사용 불가능
 console.log(div1.textContent); // 읽기
-div1.textContent = '안녕하세요2222!!!!!';
+div1.textContent = "안녕하세요2222!!!!!";
 ```
 
 **`textContent` 는 `<script>` 와 `<style>` 요소를 포함한 모든 요소의 콘텐츠를 가져옵니다.**
@@ -40,20 +40,20 @@ div1.textContent = '안녕하세요2222!!!!!';
 ```jsx
 // 2. 속성 접근
 // 요소.속성명
-let beach = document.getElementById('beach');
+let beach = document.getElementById("beach");
 console.log(beach.id); // beach
 console.log(beach.src); // 이미지 경로
 console.log(beach.width); // 200
 console.log(beach.alt); // beach
 
-let google = document.getElementById('google');
+let google = document.getElementById("google");
 console.log(google);
 console.log(google.href);
 
 // getAttribute(): 속성값 가져오기
 // setAttribute(): 속성값 설정하기
-console.log(google.getAttribute('href'));//google 주소
-console.log(google.setAttribute('href', 'https://www.naver.com'));
+console.log(google.getAttribute("href")); //google 주소
+console.log(google.setAttribute("href", "https://www.naver.com"));
 //google >> naver
 ```
 
@@ -68,9 +68,9 @@ console.log(google.setAttribute('href', 'https://www.naver.com'));
 예시:
 
 ```jsx
-<body class="main page"><script>
-    alert(document.body.className); // main page
-  </script></body>
+<body class="main page">
+  <script>alert(document.body.className); // main page</script>
+</body>
 ```
 
 `elem.className`에 무언가를 대입하면 클래스 문자열 전체가 바뀝니다. 그런데 이렇게 속성값 전체를 바꾸는 게 아니고 클래스 하나만 추가하거나 제거하고 싶은 경우도 있기 마련입니다.
@@ -82,10 +82,13 @@ console.log(google.setAttribute('href', 'https://www.naver.com'));
 예시:
 
 ```jsx
-<body class="main page"><script>
+<body class="main page">
+  <script>
     *// 클래스 추가
-    document.body.classList.add('article');*alert(document.body.className); // main page article
-  </script></body>
+    document.body.classList.add('article');*alert(document.body.className); //
+    main page article
+  </script>
+</body>
 ```
 
 이렇게 클래스 속성값 전체를 바꾸고 싶을 때는 `className`으로, 개별 클래스를 조작하고 싶을 때는 `classList`를 사용하면 됩니다. 필요에 따라 취사선택하면 되죠.
@@ -100,11 +103,11 @@ console.log(google.setAttribute('href', 'https://www.naver.com'));
 
 ```jsx
 // classList 속성
-const h1 = document.querySelector('h1');
-h1.classList.add('h1-class');// - add(클래스명): 클래스 추가
-h1.classList.remove('h1-class');// - remove(클래스명): 클래스 삭제
-h1.classList.toggle('h1-class');// - toggle(클래스명): 클래스 있으면 제거, 없으면 추가
-h1.classList.contains('h1');// - contains(클래스명): 해당 클래스가 있는지 boolean 값으로 반환 (t/f)
+const h1 = document.querySelector("h1");
+h1.classList.add("h1-class"); // - add(클래스명): 클래스 추가
+h1.classList.remove("h1-class"); // - remove(클래스명): 클래스 삭제
+h1.classList.toggle("h1-class"); // - toggle(클래스명): 클래스 있으면 제거, 없으면 추가
+h1.classList.contains("h1"); // - contains(클래스명): 해당 클래스가 있는지 boolean 값으로 반환 (t/f)
 ```
 
 ```jsx
@@ -136,17 +139,17 @@ for (let li of lis){
 // 3. 스타일(css) 제어
 // : javascript로 css 설정 가능!
 
-let h1 = document.querySelector('h1');
+let h1 = document.querySelector("h1");
 console.log(h1);
 console.log(h1.style);
 console.log(h1.style.fontSize); // camel case로 접근
 
-h1.style.color = 'limegreen';
-h1.style.backgroundColor = 'skyblue';
-h1.style.border = '4px solid brown';
-h1.style.textShadow = '2px 2px 10px #f005'; // #ff000050
+h1.style.color = "limegreen";
+h1.style.backgroundColor = "skyblue";
+h1.style.border = "4px solid brown";
+h1.style.textShadow = "2px 2px 10px #f005"; // #ff000050
 
-let lis = document.querySelectorAll('li');
+let lis = document.querySelectorAll("li");
 console.log(lis);
 ```
 
@@ -160,31 +163,31 @@ console.log(lis);
 // append(): 노드 객체 or 텍스트 추가, 한 번에 여러 개 가능
 
 // 3. 노드 삭제
-// 부모노드.removeChild(자식노드): 부모요소의 자식노드를 삭제 
+// 부모노드.removeChild(자식노드): 부모요소의 자식노드를 삭제
 // 노드.remove(): "선택한 요소"를 삭제
 
 function addNode() {
-	// alert('버튼을 클릭하셨군요!');
-	let div = document.getElementById('div1');
-	// 요소 생성하기
-	// createElement()
-	let p = document.createElement('p'); // p 태그 생성 // <p></p>
-	p.innerText = '버튼을 눌러 만들어진 p 태그'; // <p>버튼을 눌러 만들어진 p 태그</p>
-	p.style.fontWeight = '700';
-	p.classList.add('append-p');
-	
-	// div.appendChild(p);
-	// div.append('1번 추가')
-	// div.append(p, '2번 추가');
-	div.append(p);
+  // alert('버튼을 클릭하셨군요!');
+  let div = document.getElementById("div1");
+  // 요소 생성하기
+  // createElement()
+  let p = document.createElement("p"); // p 태그 생성 // <p></p>
+  p.innerText = "버튼을 눌러 만들어진 p 태그"; // <p>버튼을 눌러 만들어진 p 태그</p>
+  p.style.fontWeight = "700";
+  p.classList.add("append-p");
+
+  // div.appendChild(p);
+  // div.append('1번 추가')
+  // div.append(p, '2번 추가');
+  div.append(p);
 }
 
 function removeNode() {
-	// alert('삭제 버튼 클릭!');
-	let div = document.querySelector('#div1');
-	let p = document.querySelector('#div1 > p');
+  // alert('삭제 버튼 클릭!');
+  let div = document.querySelector("#div1");
+  let p = document.querySelector("#div1 > p");
 
-	div.removeChild(p);
+  div.removeChild(p);
 }
 
 //추가 버튼 클릭 시 추가
@@ -220,9 +223,31 @@ Node 객체는 모든 구성요소를 대표하는 객체이기 때문에 각각
 - Node.appendChild()
 - Node.removeChild()
 
-|  | append | appendChild |
-| --- | --- | --- |
-| 노드 객체(node object) | O | O |
-| 문자열 (string) | O | X |
-| 반환값 (return) | X | O |
-| 다중 값 허용 | O | X |
+|                        | append | appendChild |
+| ---------------------- | ------ | ----------- |
+| 노드 객체(node object) | O      | O           |
+| 문자열 (string)        | O      | X           |
+| 반환값 (return)        | X      | O           |
+| 다중 값 허용           | O      | X           |
+
+```jsx
+// 1. 부모 노드 찾기
+// 직속 부모는 하나
+console.log(apple.parentElement); // ul#fruits
+console.log(apple.parentElement.parentElement); // body
+
+// 2. 자식 노드 찾기
+// 자식 요소는 여러 개
+console.log(fruits.children); // li*4
+console.log(fruits.children[0]); // 0 번 자식 요소
+console.log(fruits.children[1]); // 1 번 자식 요소
+console.log(fruits.children[2]); // 2 번 자식 요소
+console.log(fruits.children[3]); // 3 번 자식 요소
+
+//3.형제 노드
+const lists = document.querySelector("li");
+const listsOrange = lists[2];
+console.log(listsOrange);
+console.log(listsOrange.PreviousElementSibling);
+console.log(listsOrange.nextElementSibling);
+```
