Update 9 20 HTML 94f4337c5f6149128871163280620cd9.md

--- a/9 20 HTML 94f4337c5f6149128871163280620cd9.md
+++ b/9 20 HTML 94f4337c5f6149128871163280620cd9.md
@@ -14,7 +14,7 @@ Section: KDT 3rd
 
 `<tr>` 안에는 `<td>`,`<th>`(Table Head) 태그가 들어갈 수 있다. 
 
-![table.png](9%2020%20HTML%2094f4337c5f6149128871163280620cd9/table.png)
+![table.png](/assets/images/posts/2022-09-20/table.png)
 
 ## table의 속성
 
