--- a/09 23 CSS 00b6e9ae3ce2491382bd9f7362c52686.md
+++ b/09 23 CSS 00b6e9ae3ce2491382bd9f7362c52686.md
@@ -4,7 +4,7 @@ Section: KDT 3rd
 작성일시: 2022년 9월 23일 오전 9:21
 최종 편집일시: 2022년 9월 23일 오후 12:10
 
-![css1.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css1.png)
+![css1.png](0923/css1.png)
 
 - 웹 페이지 디자인을 위해 사용되는 툴.
 - cascading-system으로 인해 위에서 밑으로 적용
@@ -25,53 +25,53 @@ Section: KDT 3rd
 
 - HTML 태그 안에 styles 속성을 이용해 정의하는 방법
 
-![css2.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css2.png)
+![css2.png](0923/css2.png)
 
-![css3.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css3.png)
+![css3.png](0923/css3.png)
 
 # CSS 선택자
 
-![css4.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css4.png)
+![css4.png](0923/css4.png)
 
-![css5.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css5.png)
+![css5.png](0923/css5.png)
 
-![css6.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css6.png)
+![css6.png](0923/css6.png)
 
-![css7.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css7.png)
+![css7.png](0923/css7.png)
 
-![css8.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css8.png)
+![css8.png](0923/css8.png)
 
-![css9.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css9.png)
+![css9.png](0923/css9.png)
 
-![css10.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css10.png)
+![css10.png](0923/css10.png)
 
-![css13.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css13.png)
+![css13.png](0923/css13.png)
 
-![css12.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css12.png)
+![css12.png](0923/css12.png)
 
-![css14.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css14.png)
+![css14.png](0923/css14.png)
 
-![css15.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css15.png)
+![css15.png](0923/css15.png)
 
-![css16.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css16.png)
+![css16.png](0923/css16.png)
 
-![css17.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css17.png)
+![css17.png](0923/css17.png)
 
 # 복잡한 속성
 
-![css18.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css18.png)
+![css18.png](0923/css18.png)
 
-![css20.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css20.png)
+![css20.png](0923/css20.png)
 
-![css21.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css21.png)
+![css21.png](0923/css21.png)
 
-![css22.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css22.png)
+![css22.png](0923/css22.png)
 
-![css23.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css23.png)
+![css23.png](0923/css23.png)
 
-![css24.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css24.png)
+![css24.png](0923/css24.png)
 
-![css25.png](09%2023%20CSS%2000b6e9ae3ce2491382bd9f7362c52686/css25.png)
+![css25.png](0923/css25.png)
 
 # FLEX
 
@@ -112,7 +112,7 @@ Section: KDT 3rd
 
 ### align-content
 
-`flex-wrap` 속성의 값이 `wrap`인 경우 아이템들의 가로폭의 합이 콘테이너의 가로폭을 넘어가면 아이템이 다음 줄로 내려갑니다. 이때 여러 줄이 되어버린 아이템들의 정렬을 어떻게 할지 정하는 속성이 align-content입니다. 
+`flex-wrap` 속성의 값이 `wrap`인 경우 아이템들의 가로폭의 합이 콘테이너의 가로폭을 넘어가면 아이템이 다음 줄로 내려갑니다. 이때 여러 줄이 되어버린 아이템들의 정렬을 어떻게 할지 정하는 속성이 align-content입니다.
 
 default는 `stretch`로, 높이를 꽉 채웁니다.
 
