--- a/09 28 if - else 조건문 7b8bd94aef614f6e824d6f4d6b4c426f.md
+++ b/09 28 if - else 조건문 7b8bd94aef614f6e824d6f4d6b4c426f.md
@@ -4,7 +4,7 @@ Section: KDT 3rd
 작성일시: 2022년 9월 28일 오전 11:16
 최종 편집일시: 2022년 9월 29일 오전 9:23
 
-![09-28-1.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-1.png)
+![09-28-1.png](0928/09-28-1.png)
 
 ## 비교 연산자: ==, !=
 
@@ -18,7 +18,7 @@ console.log(1 != 2); //true
 ## 비교 연산자 >, <, >=, <=
 
 ```jsx
-console.log('---');
+console.log("---");
 console.log(2 > 1); // true
 console.log(2 < 1); // false
 console.log(1 >= 1); // true
@@ -32,7 +32,7 @@ console.log(1 <= 1); // true
 - `!`: not (참 -> 거짓, 거짓 -> 참)
 
 ```jsx
-console.log('---');
+console.log("---");
 console.log(true && true); // true
 console.log(true && false); // false
 console.log(false && true); // false
@@ -46,7 +46,7 @@ console.log(!false); // true
 console.log(!!false); // false
 ```
 
-![09-28-0.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-0.png)
+![09-28-0.png](0928/09-28-0.png)
 
 ## 동등 연산자: ==, !=, ===, !==
 
@@ -55,8 +55,8 @@ console.log(1 == 1); // true
 console.log(1 == 2); // false
 console.log(1 != 1); // false
 console.log(1 != 2); // true
-console.log('1' == 1); // true
-console.log('2' != 1); // true
+console.log("1" == 1); // true
+console.log("2" != 1); // true
 // ==, !=: 타입(자료형)이 달라도 괜찮음! 값만 비교
 ```
 
@@ -65,53 +65,53 @@ console.log(1 === 1); // true
 console.log(1 === 2); // false
 console.log(1 !== 1); // false
 console.log(1 !== 2); // true
-console.log('1' === 1); // false
-console.log('2' !== 1); // true
+console.log("1" === 1); // false
+console.log("2" !== 1); // true
 ```
 
 ## 함수 안에서 조건문을 사용한다면?
 
 ```jsx
 function isBig() {
-	if (5 > 3) {
-		return 'bigger';
-	}
+  if (5 > 3) {
+    return "bigger";
+  }
 }
 console.log(isBig()); // console.log('bigger');
 ```
 
-![09-28-2.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-2.png)
+![09-28-2.png](0928/09-28-2.png)
 
-![09-28-3.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-3.png)
+![09-28-3.png](0928/09-28-3.png)
 
-![09-28-4.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-4.png)
+![09-28-4.png](0928/09-28-4.png)
 
-![09-28-5.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-5.png)
+![09-28-5.png](0928/09-28-5.png)
 
-![09-28-6.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-6.png)
+![09-28-6.png](0928/09-28-6.png)
 
-![09-28-7.png](09%2028%20if%20-%20else%20%E1%84%8C%E1%85%A9%E1%84%80%E1%85%A5%E1%86%AB%E1%84%86%E1%85%AE%E1%86%AB%207b8bd94aef614f6e824d6f4d6b4c426f/09-28-7.png)
+![09-28-7.png](0928/09-28-7.png)
 
 ## 조건문 중첩 예시
 
 ```jsx
-let usrId = 'user'; 
-let usrPw = '1234';
+let usrId = "user";
+let usrPw = "1234";
 // 로그인할 때 입력한 아이디, 비번
-let inputId = 'user';
-let inputPw = '1234';
+let inputId = "user";
+let inputPw = "1234";
 // 아이디가 일치
 // 		ㄴ 비밀번호 일치 -> 인사
 // 		ㄴ 비밀번호 불일치 -> 불일치
 if (usrId == inputId) {
-	if (usrPw == inputPw) {
-		console.log(`${userId}님 하이`);
-	} else {
-		console.log('비밀번호 재확인.');
-	}
-// 아이디가 불일치 -> 불일치
+  if (usrPw == inputPw) {
+    console.log(`${userId}님 하이`);
+  } else {
+    console.log("비밀번호 재확인.");
+  }
+  // 아이디가 불일치 -> 불일치
 } else {
-	console.log('아이디 없음');
+  console.log("아이디 없음");
 }
 ```
 
@@ -125,12 +125,12 @@ if (usrId == inputId) {
 ### Step2. (함수 + if-esle 조건문) 짝수인지 판별하는 함수 `isEven()` 정의하고 호출하기
 
 - `isEven()` 함수는 매개변수 `x` 를 가짐
-매개변수 `x`의 값이 짝수라면, `true` 반환
+  매개변수 `x`의 값이 짝수라면, `true` 반환
 - 매개변수 `x`의 값이 홀수라면, `false` 반환
 
 ```jsx
 function isEven() {
-	// 함수 완성하기
+  // 함수 완성하기
 }
 console.log(isEven(8)); // true
 console.log(isEven(7)); // false
