--- a/09 27 JS 0f7543f128b54f18bdae7dffce366fd4.md
+++ b/09 27 JS 0f7543f128b54f18bdae7dffce366fd4.md
@@ -4,11 +4,11 @@ Section: KDT 3rd
 작성일시: 2022년 9월 27일 오전 9:42
 최종 편집일시: 2022년 9월 27일 오전 11:59
 
-![js1.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js1.png)
+![js1.png](0927/js1.png)
 
-![js2.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js2.png)
+![js2.png](0927/js2.png)
 
-- 자바스크립트 길이가 너무 길다면? 사용자가 흰화면이  보이고 -> 오류처럼 보이게 됨
+- 자바스크립트 길이가 너무 길다면? 사용자가 흰화면이 보이고 -> 오류처럼 보이게 됨
 
 ### .js 파일 생성해서 연결하여 사용
 
@@ -17,17 +17,17 @@ Section: KDT 3rd
 - 웹페이지 불러온 후 실행 (html 파일을 위에서부터 한 줄씩 읽기 때문)
 - 무조건 좋은가? script를 불러오기 전에 사용자가 동작을 한다면 오류가 난 것처럼 보임
 
-![js3.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js3.png)
+![js3.png](0927/js3.png)
 
 **변수를 선언하여 메모리값을 할당받고 그 값에 value를 할당하여 메모리에 저장되게끔 한다.**
 
-![js4.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js4.png)
+![js4.png](0927/js4.png)
 
-![js5.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js5.png)
+![js5.png](0927/js5.png)
 
-![js6.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js6.png)
+![js6.png](0927/js6.png)
 
-![js7.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js7.png)
+![js7.png](0927/js7.png)
 
 ```jsx
 // [QUIZ] 변수
@@ -36,7 +36,6 @@ let q1 = 3;
 q1 - 2;
 
 console.log(q1); //할당을 안해줬기 때문에 그대로 3
-
 ```
 
 ```jsx
@@ -46,7 +45,6 @@ q2 = q2 + 5;
 q2 = q2 - 2;
 
 console.log(q2); //할당을 해서 13
-
 ```
 
 ```jsx
@@ -57,18 +55,18 @@ q3 = q3 + 1;
 console.log(q3); //13 const는 재할당이 불가능.
 ```
 
-![js8.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js8.png)
+![js8.png](0927/js8.png)
 
-![js9.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js9.png)
+![js9.png](0927/js9.png)
 
-![js10.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js10.png)
+![js10.png](0927/js10.png)
 
 ```jsx
-console.log(typeof('문자')); // string
-console.log(typeof(245)); // number
-console.log(typeof(true)); // boolean
-console.log(typeof(null)); // object
-console.log(typeof '문자'); // string
+console.log(typeof "문자"); // string
+console.log(typeof 245); // number
+console.log(typeof true); // boolean
+console.log(typeof null); // object
+console.log(typeof "문자"); // string
 ```
 
 ```jsx
@@ -78,20 +76,22 @@ console.log(text, text2);
 // 템플릿 리터럴
 // : string 내 변수와 상수를 간결하게 표현
 // 백틱(``)기호와 $, {} 기호 사용
-console.log(`${text} 저는 홍길동입니다. 저는 ${gender}이고, ${address}에 거주하고 있습니다.`)
+console.log(
+  `${text} 저는 홍길동입니다. 저는 ${gender}이고, ${address}에 거주하고 있습니다.`
+);
 ```
 
 ```jsx
-// 2. number 
+// 2. number
 // 숫자 (정수, 실수)
 // 연산 가능
-var num = 100; // 정수 
-var num2 = 0.12; // 실수 
+var num = 100; // 정수
+var num2 = 0.12; // 실수
 
 var result = 100 - 2;
 console.log(result);
 
-var result = 'apple' - 3;
+var result = "apple" - 3;
 console.log(result); // NaN: Not a Number (숫자가 아님)
 // 숫자로 변환할 수 없는 것을 숫자로 바꾸려고 할 때 NaN!
 ```
@@ -99,45 +99,44 @@ console.log(result); // NaN: Not a Number (숫자가 아님)
 ```jsx
 // 3. boolean (불, 불리언)
 // trur, false 둘 중 하나의 값을 갖는 논리 요소
-var isWater = true; 
+var isWater = true;
 var isApple = false;
 ```
 
 ```jsx
 // 4. null
-// - 빈 값. 
+// - 빈 값.
 // - null 타입으로 "타입이 존재"하지만 "값이 없음"
 // - 값이 없다는 것을 "의도적으로 명시"할 때 사용
 var y = null;
 console.log(y);
-
 ```
 
 ```jsx
 // 5. undefined
 // - 값, 타입 모두 없음 (값도 없고, 타입도 지정되어 있지 않은 상태)
-var x; 
+var x;
 console.log(x); // undefined
 ```
 
-![js11.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js11.png)
+![js11.png](0927/js11.png)
 
-![js12.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js12.png)
+![js12.png](0927/js12.png)
 
-![js13.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js13.png)
+![js13.png](0927/js13.png)
 
-![js14.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js14.png)
+![js14.png](0927/js14.png)
 
-![js15.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js15.png)
+![js15.png](0927/js15.png)
 
-![js16.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js16.png)
+![js16.png](0927/js16.png)
 
-![js17.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js17.png)
+![js17.png](0927/js17.png)
 
-![js18.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js18.png)
+![js18.png](0927/js18.png)
 
-![js19.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js19.png)
+![js19.png](0927/js19.png)
 
-![js20.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js20.png)
+![js20.png](0927/js20.png)
 
-![js21.png](09%2027%20JS%200f7543f128b54f18bdae7dffce366fd4/js21.png)
+![js21.png](0927/js21.png)
