--- a/09 30 객체 ae29e9423aa046479662b5dcd3491f78.md
+++ b/09 30 객체 ae29e9423aa046479662b5dcd3491f78.md
@@ -4,9 +4,9 @@ Section: KDT 3rd
 작성일시: 2022년 9월 30일 오전 9:20
 최종 편집일시: 2022년 9월 30일 오후 12:20
 
-![09-30.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30.png)
+![09-30.png](0930/09-30.png)
 
-![09-30-2.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-2.png)
+![09-30-2.png](0930/09-30-2.png)
 
 ## 배열 원소(요소) 읽기
 
@@ -22,23 +22,23 @@ console.log(arr1[5]); // undefined
 
 ```jsx
 console.log(arr1); //[1, 2, 3, "안녕", "반가워"]
-arr1[2] = '따란';
+arr1[2] = "따란";
 console.log(arr1); //[1, 2, '따란', "안녕", "반가워"]
 ```
 
 ### 원소 추가
 
 ```jsx
-arr1[5] ='추가';
+arr1[5] = "추가";
 console.log(arr1); //[1, 2, 3, "안녕", "반가워", '추가']
-arr1[6] ='추추가';
+arr1[6] = "추추가";
 console.log(arr1); //[1, 2, 3, "안녕", "반가워", '추가', '추추가']
 ```
 
 ### 동떨어진 인덱스 번호로 원소값 추가; 그 사이에 빈 값
 
 ```jsx
-arr1[10] = '얍';
+arr1[10] = "얍";
 console.log(arr1);
 console.log(arr1[8]); // undefined
 console.log(arr1[9]); // undefined
@@ -46,7 +46,7 @@ console.log(arr1[9]); // undefined
 
 ### 배열에서 자주 사용되는 속성/메서드
 
-![09-30-3.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-3.png)
+![09-30-3.png](0930/09-30-3.png)
 
 ```jsx
 //length : 배열 길이 = 요소 개수
@@ -74,24 +74,24 @@ console.log(arr1); //[1, 2, 3, "안녕", "반가워", '추가', '추추가', 4, 
 
 ```jsx
 // 4. unshift(x): 맨 앞에 x 를 추가
-arr2.unshift('hi');
+arr2.unshift("hi");
 console.log(arr1); //['hi', 1, 2, 3, "안녕", "반가워", '추가', '추추가', 4, 5, 6, 7, 8,]
-arr2.unshift('a', 'b'); // 여러 개 추가 가능
+arr2.unshift("a", "b"); // 여러 개 추가 가능
 console.log(arr1); //['a', 'b', 'hi', 1, 2, 3, "안녕", "반가워", '추가', '추추가', 4, 5, 6, 7, 8,]
 ```
 
 ```jsx
 // 6. indexOf(x): 배열 원소에 x 가 있는지 찾음
-console.log(arr1.indexOf('b')); // 2
-console.log(arr1.indexOf('xxxx')); // -1 : 없는 값을 찾으면 -1 반환
+console.log(arr1.indexOf("b")); // 2
+console.log(arr1.indexOf("xxxx")); // -1 : 없는 값을 찾으면 -1 반환
 ```
 
 ```jsx
 //응용
 const korean = [
-	['가', '나', '다'],
-	['라', '마', '바'],
-	['사', '아', '자'],
+  ["가", "나", "다"],
+  ["라", "마", "바"],
+  ["사", "아", "자"],
 ];
 
 console.log(korean);
@@ -106,21 +106,21 @@ console.log(korean[2][0]); //['사']
 ```jsx
 // 3차원 배열
 const nums = [
-	[
-		[1, 2, 3],
-		[4, 5, 6],
-	],
-	[
-		[7, 8, 9],
-		[10, 11, 12],
-	],
+  [
+    [1, 2, 3],
+    [4, 5, 6],
+  ],
+  [
+    [7, 8, 9],
+    [10, 11, 12],
+  ],
 ];
 
 console.log(nums);
 console.log(nums[1][0][1]); // 8 뽑기
 ```
 
-![09-30-4.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-4.png)
+![09-30-4.png](0930/09-30-4.png)
 
 - 객체: 키-값 형태
 - {}를 이용해 생성
@@ -128,15 +128,14 @@ console.log(nums[1][0][1]); // 8 뽑기
 
 ```jsx
 const cat = {
-	name: '나비',
-	age: 1,
-	mew: function () {
-		return '냐옹';
-	},
+  name: "나비",
+  age: 1,
+  mew: function () {
+    return "냐옹";
+  },
 };
 
 console.log(cat);
-
 ```
 
 ### 객체 접근하기
@@ -145,7 +144,8 @@ console.log(cat);
 // 점 표기법
 console.log(cat.name); //'나비'
 console.log(cat.age); //1
-console.log(cat.mew()); '냐옹'
+console.log(cat.mew());
+("냐옹");
 ```
 
 ```jsx
@@ -156,19 +156,19 @@ console.log(cat.age); //3
 
 ```jsx
 // key-value 추가하기
-cat.gender = 'f';
+cat.gender = "f";
 console.log(cat); //{name: '나비', age: 3, gender: 'f', mew: ƒ}
 ```
 
 ```jsx
 //리터럴 안에 배열
-cat.siblings = ['nana', 'poo'];
+cat.siblings = ["nana", "poo"];
 console.log(cat.siblings[0]); //나
 ```
 
-![09-30-5.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-5.png)
+![09-30-5.png](0930/09-30-5.png)
 
-![09-30-6.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-6.png)
+![09-30-6.png](0930/09-30-6.png)
 
 ```jsx
 // new Date(y, m, d, h, m, s, ms)
@@ -181,7 +181,7 @@ console.log(new Date(2018, 2, 2, 18, 20, 30));
 console.log(new Date(2022, 8, 30, 10, 53));
 ```
 
-![09-30-7.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-7.png)
+![09-30-7.png](0930/09-30-7.png)
 
 ```jsx
 // Date 객체 메서드
@@ -198,14 +198,13 @@ console.log(now.getMilliseconds());
 console.log(now.getDay()); // 요일: 0(일) ~ 6(토)
 ```
 
-![09-30-8.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-8.png)
+![09-30-8.png](0930/09-30-8.png)
 
 ```jsx
 // 속성
 console.log(Math.E); // 자연로그 밑
 console.log(Math.PI); // 파이
 console.log(Math.SQRT2); // 2의 제곱근
-
 ```
 
 ```jsx
@@ -246,17 +245,17 @@ console.log(Math.floor(Math.random() * 100) + 1);
 console.log(Math.floor(Math.random() * 3) + 20);
 ```
 
-![09-30-9.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-9.png)
+![09-30-9.png](0930/09-30-9.png)
 
-![09-30-10.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-10.png)
+![09-30-10.png](0930/09-30-10.png)
 
-![09-30-11.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-11.png)
+![09-30-11.png](0930/09-30-11.png)
 
-![09-30-12.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-12.png)
+![09-30-12.png](0930/09-30-12.png)
 
-![09-30-13.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-13.png)
+![09-30-13.png](0930/09-30-13.png)
 
-![09-30-14.png](09%2030%20%E1%84%80%E1%85%A2%E1%86%A8%E1%84%8E%E1%85%A6%20ae29e9423aa046479662b5dcd3491f78/09-30-14.png)
+![09-30-14.png](0930/09-30-14.png)
 
 ---
 
@@ -266,7 +265,7 @@ html 요소 선택하는 방법
 dom 요소 선택하기 (DOM API)
 
 ```jsx
-document.getElementById('something');
-document.querySelector('#something');
+document.getElementById("something");
+document.querySelector("#something");
 //id 는 유일하므로 속도가 가장 빠름
 ```
