10/11 파일 업로드 추가

--- a/10 11 Server ecd64aa110f449be955a16d5494a416d.md
+++ b/10 11 Server ecd64aa110f449be955a16d5494a416d.md
@@ -44,8 +44,8 @@ Section: KDT 3rd
 
 ## 추가 자료
 
-[08-1.*ncp*서버\_생성하기.pdf](1011/08-1._ncp_%25EC%2584%259C%25EB%25B2%2584_%25EC%2583%259D%25EC%2584%25B1%25ED%2595%2598%25EA%25B8%25B0.pdf)
+[08-1.*ncp*서버\_생성하기.pdf](1011/08-1._ncp_서버_생성하기.pdf)
 
-[08-3.*filezilla*설치하기.pdf](1011/08-3._filezilla_%25EC%2584%25A4%25EC%25B9%2598%25ED%2595%2598%25EA%25B8%25B0.pdf)
+[08-3.*filezilla*설치하기.pdf](1011/08-3._filezilla_설치하기.pdf)
 
-[08-4.*웹*서버\_설정하기.pdf](1011/08-4._%25EC%259B%25B9_%25EC%2584%259C%25EB%25B2%2584_%25EC%2584%25A4%25EC%25A0%2595%25ED%2595%2598%25EA%25B8%25B0.pdf)
+[08-4.*웹*서버\_설정하기.pdf](1011/08-4._웹_서버_설정하기.pdf)
