비동기 처리방식 / Promise

--- a/10 13 a374b9bdb96c49bf9e3a5b3a186cbdfa.md
+++ b/10 13 a374b9bdb96c49bf9e3a5b3a186cbdfa.md
@@ -2,7 +2,7 @@
 
 Section: KDT 3rd
 작성일시: 2022년 10월 13일 오후 11:22
-최종 편집일시: 2022년 10월 13일 오후 11:23
+최종 편집일시: 2022년 10월 13일 오후 11:23add
 ![1.png](1013/1.png)
 
 ![2.png](1013/2.png)
