--- a/10 28 비동기 처리 b365fbfe363a4e73870926d20fb3eeaf.md
+++ b/10 28 비동기 처리 b365fbfe363a4e73870926d20fb3eeaf.md
@@ -1,7 +1,7 @@
 # 10/28 비동기 처리
 
 작성일시: 2022년 10월 28일 오전 10:35
-최종 편집일시: 2022년 10월 28일 오후 12:05
+최종 편집일시: 2022년 10월 31일 오전 9:40
 
 ![1.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/1.png)
 
@@ -59,3 +59,71 @@ promise1() // true, false
 ![10.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/10.png)
 
 ![11.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/11.png)
+
+```java
+//Step1. callback 방식
+ function changeBgColor(newColor, delay, callback) {
+   setTimeout(function () {
+     document.body.style.backgroundColor = newColor;
+     callback();
+   }, delay);
+ }
+
+ changeBgColor('red', 1000, function () {
+   changeBgColor('orange', 1000, function () {
+     changeBgColor('yellow', 1000, function () {
+       changeBgColor('green', 1000, function () {
+         changeBgColor('blue', 1000, function () {
+           console.log('END!');
+         });
+       });
+     });
+   });
+ });
+
+// Step2. callback -> promise
+function changeBgColor(newColor) {
+  return new Promise(function (resolve, reject) {
+    setTimeout(function () {
+      document.body.style.backgroundColor = newColor;
+      resolve();
+    }, 1000);
+  });
+}
+
+changeBgColor('red')
+  .then(function () {
+    return changeBgColor('orange');
+  })
+  .then(function () {
+    return changeBgColor('yellow');
+  })
+  .then(function () {
+    return changeBgColor('green');
+  })
+  .then(function () {
+    return changeBgColor('blue');
+  });
+```
+
+![12.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/12.png)
+
+```jsx
+// async / await
+
+// 기본 구조
+async function 함수명() {
+  await 비동기_처리_메서드();
+}
+
+// async 키워드 (asynchronous)
+// - 함수를 비동기 함수로 선언
+// - 프로미스를 반환하지 않더라도 자동으로 프로미스를 반환함을 암시
+// - 반환값(return ?)이 있으면 resolve
+// - 오류가 있으면, rejected
+
+// await 키워드
+// - 대기 키워드 (기다리게 함): 비동기 코드를 동기적으로 보이게 함
+
+// => async/await 는 세트이다!! 같이 사용하자~~~~
+```
