--- a/10 28 비동기 처리 b365fbfe363a4e73870926d20fb3eeaf.md
+++ b/10 28 비동기 처리 b365fbfe363a4e73870926d20fb3eeaf.md
@@ -3,29 +3,29 @@
 작성일시: 2022년 10월 28일 오전 10:35
 최종 편집일시: 2022년 10월 31일 오전 9:40
 
-![1.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/1.png)
+![1.png](./10%2028/1.png)
 
-![5.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/5.png)
+![5.png](./10%2028/5.png)
 
-![2.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/2.png)
+![2.png](./10%2028/2.png)
 
-![3.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/3.png)
+![3.png](./10%2028/3.png)
 
-![4.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/4.png)
+![4.png](./10%2028/4.png)
 
-![6.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/6.png)
+![6.png](./10%2028/6.png)
 
 마찬가지로 메서드함수들도 다른 함수들을 인자로 갖고, 메서드 함수가 먼저 실행되고 인자 함수들이 실행되니, 메서드 함수들도 콜백함수를 갖는다고 볼 수 있다.
 
 `setTimeout()`과 마찬가지로 `addEventListner()`도 대표적인 콜백함수를 갖는 메서드함수라고 생각하면 된다.
 
-![Untitled](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/Untitled.png)
+![Untitled](./10%2028/Untitled.png)
 
-![7.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/7.png)
+![7.png](./10%2028/7.png)
 
-![8.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/8.png)
+![8.png](./10%2028/8.png)
 
-![9.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/9.png)
+![9.png](./10%2028/9.png)
 
 ```jsx
 // promise 객체를 반환하는 promise1 함수 정의
@@ -46,19 +46,19 @@ function promise1(flag) {
 }
 
 promise1() // true, false
-//ture값 일시 then 함수 연결
+  //ture값 일시 then 함수 연결
   .then(function (result) {
     console.log(result);
   })
-//false값 일시, catch 함수 연결
+  //false값 일시, catch 함수 연결
   .catch(function (err) {
     console.log(err);
   });
 ```
 
-![10.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/10.png)
+![10.png](./10%2028/10.png)
 
-![11.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/11.png)
+![11.png](./10%2028/11.png)
 
 ```java
 //Step1. callback 방식
@@ -106,7 +106,7 @@ changeBgColor('red')
   });
 ```
 
-![12.png](10%2028%20%E1%84%87%E1%85%B5%E1%84%83%E1%85%A9%E1%86%BC%E1%84%80%E1%85%B5%20%E1%84%8E%E1%85%A5%E1%84%85%E1%85%B5%20b365fbfe363a4e73870926d20fb3eeaf/12.png)
+![12.png](./10%2028/12.png)
 
 ```jsx
 // async / await
