--- a/11 03 데이터베이스 2da5bc50ca9f4c27ba25c671302e9dc0.md
+++ b/11 03 데이터베이스 2da5bc50ca9f4c27ba25c671302e9dc0.md
@@ -4,7 +4,7 @@ Section: KDT 3rd
 작성일시: 2022년 11월 3일 오전 11:10
 최종 편집일시: 2022년 11월 3일 오전 11:26
 
-![화면 캡처 2022-11-03 111035.png](1103/%25ED%2599%2594%25EB%25A9%25B4_%25EC%25BA%25A1%25EC%25B2%2598_2022-11-03_111035.png)
+![화면 캡처 2022-11-03 111035.png](./1103/%ED%99%94%EB%A9%B4%20%EC%BA%A1%EC%B2%98%202022-11-03%20111035.png)
 
 ![2.png](1103/2.png)
 
