--- a/11 11 Sequelize d447a11ea4c04ef3a32084571e60eeec.md
+++ b/11 11 Sequelize d447a11ea4c04ef3a32084571e60eeec.md
@@ -4,19 +4,19 @@ Section: KDT 3rd
 작성일시: 2022년 11월 11일 오후 5:43
 최종 편집일시: 2022년 11월 11일 오후 5:47
 
-![1.png](../KDT__Coding-on__3rd__TIL/1111/1.png)
+![1.png](./1111/1.png)
 
-![2.png](../KDT__Coding-on__3rd__TIL/1111/2.png)
+![2.png](./1111/2.png)
 
-![3.png](../KDT__Coding-on__3rd__TIL/1111/3.png)
+![3.png](./1111/3.png)
 
-![4.png](../KDT__Coding-on__3rd__TIL/1111/4.png)
+![4.png](./1111/4.png)
 
-![5.png](../KDT__Coding-on__3rd__TIL/1111/5.png)
+![5.png](./1111/5.png)
 
-![6.png](../KDT__Coding-on__3rd__TIL/1111/6.png)
+![6.png](./1111/6.png)
 
-![7.png](../KDT__Coding-on__3rd__TIL/1111/7.png)
+![7.png](./1111/7.png)
 
 ```jsx
 const model = Sequelize.define(
@@ -50,7 +50,7 @@ const model = Sequelize.define(
 };
 ```
 
-![8.png](../KDT__Coding-on__3rd__TIL/1111/8.png)
+![8.png](./1111/8.png)
 
 ```jsx
 exports.getVisitors = (req, res) => {
